--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,11 @@ bcrypt = "^3.2.0"
 python-multipart = "^0.0.5"
 psycopg2-binary = "^2.8.6"
 Authlib = "^0.15.3"
-httpx = "^0.16.1"
 typer = "^0.3.2"
+httpx = "^0.16.1"
+tortoise-orm = "^0.16.21"
+aerich = "^0.5.0"
+asyncpg = "^0.22.0"
 
 [tool.poetry.dev-dependencies]
 
