--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ fastapi = {extras = ["all"], version = "^0.63.0"}
 SQLAlchemy = "^1.3.23"
 alembic = "^1.5.4"
 emails = "^0.6"
-PyJWT = "^2.0.1"
+pyjwt = "^1.7.1"
 passlib = "^1.7.4"
 bcrypt = "^3.2.0"
 python-multipart = "^0.0.5"
@@ -22,6 +22,7 @@ httpx = "^0.16.1"
 tortoise-orm = "^0.16.21"
 aerich = "^0.5.0"
 asyncpg = "^0.22.0"
+PyGithub = "^1.54.1"
 
 [tool.poetry.dev-dependencies]
 
